clusters/nibbler/infra/envoy-gateway-config/Gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-gateway
  namespace: envoy-gateway-system
  annotations:
    cert-manager.io/cluster-issuer: nibbler
    cert-manager.io/private-key-algorithm: ECDSA
    cert-manager.io/private-key-size: "384"
spec:
  gatewayClassName: envoy-gateway
  infrastructure:
    annotations:
      # See [CiliumLoadBalancerIPPool.yaml](CiliumLoadBalancerIPPool.yaml)
      io.cilium/lb-ipam-ips: "10.4.1.225"
    parametersRef:
      # Required for CiliumL2AnnouncementPolicy
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: envoy-gateway-system-ds
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      hostname: "*.envoy.nibbler.dahaegga.com"
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: https-wildcard-cert
